Check in everything except launch settings.

--- a/SignalR_Server_Client/SignalR/SignalR/appsettings.json
+++ b/SignalR_Server_Client/SignalR/SignalR/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"Translator": {
+  //  "Active": "Azure",
+  //  "DeepLKey": "",
+  //  "AzureKey": "",
+  //  "AzureRegion": "eastus"
+  //},
+  "Translator": {
+    "Active": "DeepL",
+    "DeepLKey": "",
+    "AzureKey": "",
+    "AzureRegion": "eastus"
+  },
   "AllowedHosts": "*"
 }
