--- a/SignalR_Server_Client/SignalR/SignalR/SignalR.csproj
+++ b/SignalR_Server_Client/SignalR/SignalR/SignalR.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SignalR.Client\SignalR.Client.csproj" />
+    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared\Models\" />
   </ItemGroup>
 
 </Project>
